--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dev_dependencies:
   mockito: ^5.4.0
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
+  bloc_test: ^9.1.1
 
 flutter:
   uses-material-design: true
